--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@tiptap/extension-underline": "^2.10.0",
     "@tiptap/react": "^2.10.0",
     "@tiptap/starter-kit": "^2.10.0",
+    "@monaco-editor/react": "^4.6.0",
+    "monaco-editor": "^0.52.2",
     "firebase": "^12.1.0",
     "marked": "^16.1.1",
     "react": "^18.3.1",
